*** empty log message ***

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,12 @@
 AUTOMAKE_OPTIONS = gnu
 
-pkgdata_DATA = bumper.pbl font_34.png trigger.pbl tux_small.pbl floor_target.pbl
+pkgdata_DATA = \
+bumper.pbl \
+floor.pbl \
+floor_target.pbl \
+font_34.png \
+pinball.pbl \
+stopper.pbl \
+tux_small.pbl
 
 EXTRA_DIST = $(pkgdata_DATA)
