--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,12 +1,13 @@
 AUTOMAKE_OPTIONS = gnu
 
 pkgdata_DATA = \
+left_arm.pbl \
+right_arm.pbl \
 bumper.pbl \
 floor.pbl \
 floor_target.pbl \
-font_34.png \
-pinball.pbl \
 stopper.pbl \
-tux_small.pbl
+font_34.png \
+face.png
 
 EXTRA_DIST = $(pkgdata_DATA)
