The name of the module is now generated by the script and insterted into pinball.pbl. No need fix the name in the editor to be able to load the table. (+small fix in bumperdialog)

--- a/data/template/pinball-template.in
+++ b/data/template/pinball-template.in
@@ -23,4 +23,18 @@ cp @datadir@/pinedit/template/Make-template $1/Makefile
 cp @datadir@/pinedit/template/pinball.pbl $1/pinball.pbl
 cp @datadir@/pinedit/template/ModuleScript.cpp $1/Module$2.cpp
 cp @datadir@/pinedit/template/libtool $1/libtool
+
+echo "object module {
+  0 0 0
+  0 0 0
+  1 1 1
+  module {
+      libModule$2.la
+  }
+  properties {
+    transform_once
+    group_1
+  }
+}" >> $1/pinball.pbl
+
 chmod a+x $1/libtool
