--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
 Source: pinedit
-Section: unknown
+Section: games
 Priority: extra
 Maintainer: Philippe Coval <rzr@gna.org>
-Build-Depends: debhelper (>= 7.0.50~), autotools-dev
+Build-Depends: debhelper (>= 7.0.50~), autotools-dev, libqt3-mt-dev
 Standards-Version: 3.9.1
-Homepage: <insert the upstream URL, if relevant>
+Homepage: http://pinball.sf.net
 #Vcs-Git: git://git.debian.org/collab-maint/pinedit.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/pinedit.git;a=summary
 
