patch: shurd @ http://www.freebsd.org/cgi/query-pr.cgi?pr=156138 ; minor tweek to rebuild on debian

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,67 @@
 *~
+config.log
+libtool
+.pc/
+.#*
+*.o
+
+Makefile
+autom4te.cache/
+config.status
+data/Makefile
+data/audio/Makefile
+data/objects/Makefile
+data/template/Makefile
+data/template/pinball-template
+debian/patches/
+doc/Makefile
+downstream/freebsd/pinedit/#pkg-plist#
+editconfig.h
+libltdl/.deps/
+libltdl/.libs/
+libltdl/Makefile
+libltdl/argz.c
+libltdl/argz_.h
+libltdl/config.h
+libltdl/config.status
+libltdl/config/
+libltdl/configure.ac
+libltdl/dlopen.la
+libltdl/dlopen.lo
+libltdl/dlopen.o
+libltdl/libltdl/
+libltdl/libltdlc.la
+libltdl/libltdlc_la-lt__alloc.lo
+libltdl/libltdlc_la-lt__alloc.o
+libltdl/libltdlc_la-lt_dlloader.lo
+libltdl/libltdlc_la-lt_dlloader.o
+libltdl/libltdlc_la-lt_error.lo
+libltdl/libltdlc_la-lt_error.o
+libltdl/libltdlc_la-ltdl.lo
+libltdl/libltdlc_la-ltdl.o
+libltdl/libltdlc_la-preopen.lo
+libltdl/libltdlc_la-preopen.o
+libltdl/libltdlc_la-slist.lo
+libltdl/libltdlc_la-slist.o
+libltdl/loaders/
+libltdl/lt__alloc.c
+libltdl/lt__dirent.c
+libltdl/lt__strl.c
+libltdl/lt__strl.lo
+libltdl/lt__strl.o
+libltdl/lt_dlloader.c
+libltdl/lt_error.c
+libltdl/m4/
+libltdl/slist.c
+libltdl/stamp-h
+libltdl/stamp-h1
+pinedit/.deps/
+pinedit/Makefile
+stamp-h1
+confdefs.h
+conftest.dir/
+conftest.c
+conftest.err
+conftest
+moc_*.cpp
+pinedit/pinedit
