--- a/pinedit/Makefile.am
+++ b/pinedit/Makefile.am
@@ -12,7 +12,8 @@ pinedit_LDFLAGS = -L. -export-dynamic
 
 INCLUDES = @INCLTDL@
 
-dnl MOC = $(EM_QTDIR)/bin/moc
+#dnl MOC = $(EM_QTDIR)/bin/moc
+MOC?=moc
 
 moc_%.cpp : %.h
 	@echo "Creating Meta $< ..."
