--- a/data/objects/Makefile.in
+++ b/data/objects/Makefile.in
@@ -125,6 +125,7 @@ LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MATHLIB = @MATHLIB@
 MKDIR_P = @MKDIR_P@
+MOC = @MOC@
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
@@ -143,6 +144,10 @@ PINBALL_CFLAGS = @PINBALL_CFLAGS@
 PINBALL_CONFIG = @PINBALL_CONFIG@
 PINBALL_LIBS = @PINBALL_LIBS@
 PIN_DATADIR = @PIN_DATADIR@
+QEMBED = @QEMBED@
+QT_CXXFLAGS = @QT_CXXFLAGS@
+QT_GUILINK = @QT_GUILINK@
+QT_LDADD = @QT_LDADD@
 RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
@@ -151,6 +156,7 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+UIC = @UIC@
 VERSION = @VERSION@
 XMKMF = @XMKMF@
 X_CFLAGS = @X_CFLAGS@
