--- a/editconfig.h.in
+++ b/editconfig.h.in
@@ -73,5 +73,8 @@
 /* Version number of package */
 #undef VERSION
 
+/* Defined if on Win32 platform */
+#undef WIN32
+
 /* Define to 1 if the X Window System is missing or not being used. */
 #undef X_DISPLAY_MISSING
