--- a/pinedit/Makefile.in
+++ b/pinedit/Makefile.in
@@ -83,7 +83,8 @@ am_pinedit_OBJECTS = main.$(OBJEXT) command.$(OBJEXT) \
 	moc_textdialog.$(OBJEXT) moc_polygonview.$(OBJEXT) \
 	moc_texcoorddialog.$(OBJEXT) moc_moduledialog.$(OBJEXT)
 pinedit_OBJECTS = $(am_pinedit_OBJECTS)
-pinedit_DEPENDENCIES =
+am__DEPENDENCIES_1 =
+pinedit_DEPENDENCIES = $(am__DEPENDENCIES_1)
 pinedit_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) \
 	$(pinedit_LDFLAGS) $(LDFLAGS) -o $@
@@ -159,6 +160,9 @@ LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MATHLIB = @MATHLIB@
 MKDIR_P = @MKDIR_P@
+
+#dnl MOC = $(EM_QTDIR)/bin/moc
+MOC = moc
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
@@ -177,6 +181,10 @@ PINBALL_CFLAGS = @PINBALL_CFLAGS@
 PINBALL_CONFIG = @PINBALL_CONFIG@
 PINBALL_LIBS = @PINBALL_LIBS@
 PIN_DATADIR = @PIN_DATADIR@
+QEMBED = @QEMBED@
+QT_CXXFLAGS = @QT_CXXFLAGS@
+QT_GUILINK = @QT_GUILINK@
+QT_LDADD = @QT_LDADD@
 RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
@@ -185,6 +193,7 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+UIC = @UIC@
 VERSION = @VERSION@
 XMKMF = @XMKMF@
 X_CFLAGS = @X_CFLAGS@
@@ -805,9 +814,6 @@ uninstall-am: uninstall-binPROGRAMS
 	pdf pdf-am ps ps-am tags uninstall uninstall-am \
 	uninstall-binPROGRAMS
 
-
-#dnl MOC = $(EM_QTDIR)/bin/moc
-MOC?=moc
 
 moc_%.cpp : %.h
 	@echo "Creating Meta $< ..."
