--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: games
 Priority: extra
 Maintainer: Philippe Coval <rzr@gna.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev,
- libtool,
- libqt3-headers, libqt3-mt-dev,
+ libtool, libltdl-dev,
+ libqt3-mt-dev,
  pinball-dev,
  libsdl1.2-dev, 
 Standards-Version: 3.9.1
