--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,14 @@ Priority: extra
 Maintainer: Philippe Coval <rzr@gna.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev,
  libtool, libltdl-dev,
- libqt3-mt-dev,
+ libqt3-mt-dev, libqt3-compat-headers,
  pinball-dev,
- libsdl1.2-dev, 
+ autoconf, automake, libtool, sp, sgmlspl, docbook, docbook-utils,
+ libltdl-dev (>= 2.2.6b),
+ libgl1-mesa-dev | xlibmesa-gl-dev | mesag-dev | libgl-dev, freeglut3-dev,
+ libsdl1.2-dev,  libsdl-image1.2-dev, libpng-dev, libtiff4-dev, libaa1-dev,
+ libsdl-mixer1.2-dev, libogg-dev, libvorbis-dev, 
+ libasound2-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386]
 Standards-Version: 3.9.1
 Homepage: http://pinball.sf.net
 #Vcs-Git: git://git.debian.org/collab-maint/pinedit.git
@@ -15,8 +20,7 @@ Homepage: http://pinball.sf.net
 Package: pinedit
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Pinball table edtor
+Description: Editor, 3D Modeller for Emilia Pinball
  Editor for Emilia Pinball.
  Emilia Pinball is a free pinball game. 
-
 
