--- a/Makefile.in
+++ b/Makefile.in
@@ -278,7 +278,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = gnu
-SUBDIRS = libltdl pinedit data doc
+SUBDIRS = libltdl src data doc
 templatedatadir = $(pkgdatadir)/template
 templatedata_DATA = libtool 
 EXTRA_DIST = bootstrap clean pinedit.spec
