--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -162,7 +162,7 @@ MATHLIB = @MATHLIB@
 MKDIR_P = @MKDIR_P@
 
 #dnl MOC = $(EM_QTDIR)/bin/moc
-MOC = moc
+MOC = moc-qt4
 NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
