--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ libtool
 .#*
 *.o
 *#
-
+configure
 Makefile
 autom4te.cache/
 config.status
@@ -18,6 +18,9 @@ debian/patches/
 doc/Makefile
 downstream/freebsd/pinedit/#pkg-plist#
 editconfig.h
+
+libltdl/
+
 libltdl/.deps/
 libltdl/.libs/
 libltdl/Makefile
