--- a/debian/rules
+++ b/debian/rules
@@ -13,6 +13,7 @@ export DH_VERBOSE=1
 	dh $@ 
 
 override_dh_auto_configure:
+	dh_autoreconf 
 	./bootstrap
 	PINBALL_CONFIG="/usr/games/pinball-config" \
 	dh_auto_configure -- \
