--- a/debian/rules
+++ b/debian/rules
@@ -13,9 +13,10 @@ export DH_VERBOSE=1
 	dh $@ 
 
 override_dh_auto_configure:
-	dh_autoreconf 
-	./bootstrap
-	PINBALL_CONFIG="/usr/games/pinball-config" \
+	rm -rf libltdl configure ltmain.sh
+	libtoolize --ltdl --force --copy
+	dh_autoreconf
+	PINBALL_CONFIG="/usr/bin/pinball-config" \
 	dh_auto_configure -- \
  --bindir=/usr/games --datadir=/usr/share/games \
  --with-cflags="$(CFLAGS)" \
