--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: pinedit
 Section: games
 Priority: extra
-Maintainer: Philippe Coval <rzr@gna.org>
+Maintainer: Philippe Coval <rzr@users.sf.net>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev,
  cmake,
  pinball-dev,
